bk_ida/gccida/c3/free_edge
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/free_edge/src/cfg.c:616:23: error: use of undeclared identifier 'edge_def'
memset( e, 0, sizeof( edge_def)); 
                      ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/free_edge/src/obj/cfg.o] Error 1
